Chapter10-1끝, Chapter 10-2 시작

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,8 @@
         "./chapter_9/panic/Cargo.toml",
         "./chapter_9/result/Cargo.toml",
         "./chapter_9/panic_or_non_panic/Cargo.toml",
+        "./chapter_10/generic/Cargo.toml",
+        "./chapter_10/traits/Cargo.toml",
     ],
     "cSpell.words": [
         "println",
